k8s/apps/firefox/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefox 
  namespace: apps 
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - firefox.internal.grendel71.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: firefox
          port: 3000
